--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM daocloud.io/library/java:8u40-jdk
-COPY mytest.jar /usr/local/
-WORKDIR /usr/local
+COPY mytest.jar /usr/local/games/
+WORKDIR /usr/local/games/
 CMD java -jar mytest.jar
