--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,5 +6,6 @@ services:
       dockerfile: Dockerfile
     image: mytest:v1.0
     container_name: mytest
+    command: /bin/sh -c
     ports:
       - 8082:8081
