--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     </dependencies>
 
     <build>
-        <finalName>mytest</finalName>
+        <finalName>demo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
